objects/ssot__CareProgramSiteContract__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramSiteId__c</fullName>
        <label>Care Program Site</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractId__c</fullName>
        <label>Contract</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Site Contract</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742275554036_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramSiteContract_CareProgramS_rel</label>
        <referenceTo>ssot__CareProgramSite__dlm</referenceTo>
        <relationshipLabel>CareProgramSiteContract_CareProgramS_rel</relationshipLabel>
        <relationshipName>rel_1742275554036_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742275560210_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramSiteContract_ContractId_m_rel</label>
        <referenceTo>ssot__Contract__dlm</referenceTo>
        <relationshipLabel>CareProgramSiteContract_ContractId_m_rel</relationshipLabel>
        <relationshipName>rel_1742275560210_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>